[package]
name = "actman"
version = "0.1.0"
authors = ["Youngjoon Lee"]
edition = "2021"
license = "Apache-2.0"
description = "Async Actor Model Library in Rust"
homepage = "https://github.com/atman-project"
repository = "https://github.com/atman-project/actman"
readme = "README.md"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
